--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>ChannelSearch-Pro-Filter</title>
+    <link rel="stylesheet" href="style/style.css">
+    <title>ChannelSearch Pro Filter</title>
 </head>
 <body>
     <div class="row" bis_skin_checked="1">
